force-app/main/default/objects/pse__Revenue_Forecast_Type__c/pse__Revenue_Forecast_Type__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastTypeHelp</customHelpPage>
    <description>Stores the revenue forecast for a relevant object, for example Milestone or Est Vs Actuals.</description>
    <label>Revenue Forecast Type</label>
    <nameField>
        <displayFormat>RFT-{00000000}</displayFormat>
        <label>Revenue Forecast Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>