force-app/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Actuals__c</fullName>
    <description>Contains the combined value of the Revenue Recognized to Date and the Revenue Pending Recognition fields.</description>
    <formula>pse__Revenue_Recognized_To_Date__c  +  pse__Revenue_Pending_Recognition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains the combined value of the Revenue Recognized to Date and the Revenue Pending Recognition fields.</inlineHelpText>
    <label>Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>