force-app/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Revenue_Forecast__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast__c</fullName>
    <description>Lookup to the relevant revenue forecast.</description>
    <inlineHelpText>Lookup to the relevant revenue forecast.</inlineHelpText>
    <label>Revenue Forecast</label>
    <referenceTo>pse__Revenue_Forecast__c</referenceTo>
    <relationshipLabel>Revenue Forecast Types</relationshipLabel>
    <relationshipName>Revenue_Forecast_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>