force-app/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Revenue_Pending_Recognition__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Pending_Recognition__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The revenue that is ready for recognition on this revenue forecast.</description>
    <inlineHelpText>The revenue that is ready for recognition on this revenue forecast.</inlineHelpText>
    <label>Revenue Pending Recognition</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>